fixed checkbox vertical align

--- a/src/components/Item.scss
+++ b/src/components/Item.scss
@@ -24,7 +24,7 @@
     }
 
     input[type="checkbox"] {
-      vertical-align: middle;
+
       // position: absolute;
       // border: 1px solid orange;
       // height: 1rem;
